# sidekick

./: .gitignore  README.md  package-lock.json  package.json
backend/: blender_seed_data.py  figma_seed_data.py  ingest.py  main.py  rag.py  requirements.txt  seed_data.py  vision.py
src/: App.css  App.tsx  Overlay.tsx  main.tsx  overlay.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
